# EasyDiffractionBeta

./: .gitignore  CHANGELOG.md  DEPENDENCIES.md  EasyDiffractionBeta.qmlproject  IDEAS.md  README.md  RELEASE.md  pyproject.toml  qml_project.qmlproject  qml_sandbox.qmlproject  utils.py
.github/workflows/: build.yml  installer.yml  snapcraft.yml
docs/Developer/Diagrams/: EasyDiffractionApp.drawio
easyDiffractionApp/: main.py  resources.qrc
easyDiffractionApp/Examples/CeCuAl3/: project.cif
easyDiffractionApp/Examples/CeCuAl3/experiments/: polaris.cif
easyDiffractionApp/Examples/CeCuAl3/models/: cecual3.cif
easyDiffractionApp/Examples/CeCuAl3/summary/: report.cif
easyDiffractionApp/Examples/CeCuAl3_Polaris@ISIS/: project.cif
easyDiffractionApp/Examples/CeCuAl3_Polaris@ISIS/experiments/: polaris.cif
easyDiffractionApp/Examples/CeCuAl3_Polaris@ISIS/models/: cecual.cif
easyDiffractionApp/Examples/CeCuAl3_Polaris@ISIS/summary/: report.cif
easyDiffractionApp/Examples/CeO2_iMATERIA@J-PARC/: project.cif
easyDiffractionApp/Examples/CeO2_iMATERIA@J-PARC/experiments/: imateria.cif
easyDiffractionApp/Examples/CeO2_iMATERIA@J-PARC/models/: ceo.cif
easyDiffractionApp/Examples/CeO2_iMATERIA@J-PARC/summary/: report.cif
easyDiffractionApp/Examples/Co2SiO4-Mult-Phases/: project.cif
easyDiffractionApp/Examples/Co2SiO4-Mult-Phases/experiments/: d20.cif
easyDiffractionApp/Examples/Co2SiO4-Mult-Phases/models/: co2sio4.cif  coo.cif
easyDiffractionApp/Examples/Co2SiO4-Mult-Phases/summary/: report.cif
easyDiffractionApp/Examples/Co2SiO4-Mult-Phases_D20@ILL/: project.cif
easyDiffractionApp/Examples/Co2SiO4-Mult-Phases_D20@ILL/experiments/: d20.cif
easyDiffractionApp/Examples/Co2SiO4-Mult-Phases_D20@ILL/summary/: report.cif
easyDiffractionApp/Examples/Co2SiO4/experiments/: d20.cif
easyDiffractionApp/Examples/Co2SiO4/models/: co2sio4.cif
easyDiffractionApp/Examples/Co2SiO4/summary/: report.cif
easyDiffractionApp/Examples/Co2SiO4_D20@ILL/: project.cif
easyDiffractionApp/Examples/Co2SiO4_D20@ILL/summary/: report.cif
easyDiffractionApp/Examples/DefaultProject/: project.cif
easyDiffractionApp/Examples/Dy3Al5O12/: project.cif
easyDiffractionApp/Examples/Dy3Al5O12/experiments/: g41.cif
easyDiffractionApp/Examples/Dy3Al5O12/models/: dy3al5o12.cif
easyDiffractionApp/Examples/Dy3Al5O12/summary/: report.cif
easyDiffractionApp/Examples/Dy3Al5O12_G41@LLB/summary/: report.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3/: project.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3-Mult-Phases/experiments/: hrpt.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3-Mult-Phases/models/: coo.cif  lbco.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3-Mult-Phases_HRPT@PSI/: project.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3-Mult-Phases_HRPT@PSI/summary/: report.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3-Raw/: project.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3-Raw/experiments/: hrpt.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3-Raw/models/: lbco.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3-Xye/: hrpt.cif  hrpt.xye
easyDiffractionApp/Examples/La0.5Ba0.5CoO3/experiments/: hrpt.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3/models/: lbco.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3/summary/: report.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3_HRPT@PSI/experiments/: hrpt.cif
easyDiffractionApp/Examples/La0.5Ba0.5CoO3_HRPT@PSI/models/: lbco.cif
easyDiffractionApp/Examples/LaMnO3/experiments/: 3t2.cif
easyDiffractionApp/Examples/LaMnO3/summary/: report.cif
easyDiffractionApp/Examples/LaMnO3_3T2@LLB/: project.cif
easyDiffractionApp/Examples/LaMnO3_3T2@LLB/models/: lmo.cif
easyDiffractionApp/Examples/Na2Ca3Al2F14_Osiris@ISIS/: project.cif
easyDiffractionApp/Examples/Na2Ca3Al2F14_Osiris@ISIS/experiments/: osiris.cif
easyDiffractionApp/Examples/Na2Ca3Al2F14_Osiris@ISIS/models/: ncaf.cif
easyDiffractionApp/Examples/Na2Ca3Al2F14_Osiris@ISIS/summary/: report.cif
easyDiffractionApp/Examples/Na2Ca3Al2F14_WISH@ISIS/: project.cif
easyDiffractionApp/Examples/Na2Ca3Al2F14_WISH@ISIS/experiments/: wish.cif  wish_initial.cif
easyDiffractionApp/Examples/Na2Ca3Al2F14_WISH@ISIS/models/: ncaf.cif  ncaf_initial.cif
easyDiffractionApp/Examples/Na2Ca3Al2F14_WISH@ISIS/summary/: report.cif
easyDiffractionApp/Examples/PbSO4/experiments/: d1a.cif
easyDiffractionApp/Examples/PbSO4/models/: pbso4.cif
easyDiffractionApp/Examples/PbSO4/summary/: report.cif
easyDiffractionApp/Examples/PbSO4_D1A@ILL/: project.cif
easyDiffractionApp/Examples/PbSO4_D1A@ILL/summary/: report.cif
easyDiffractionApp/Examples/Si/experiments/: sepd.cif
easyDiffractionApp/Examples/Si3N4/: project.cif
easyDiffractionApp/Examples/Si3N4_3T2@LLB/: project.cif
easyDiffractionApp/Examples/Si_SEPD@Argonne/: project.cif
easyDiffractionApp/Examples/Tb2Ti2O7_HEiDi@MLZ/: project.cif
easyDiffractionApp/Gui/: main.qml
easyDiffractionApp/Gui/Components/: ApplicationWindow.qml  CloseDialog.qml  GuiTestsController.qml  SplashScreen.qml  StatusBar.qml  UserTutorialsController.qml
easyDiffractionApp/Gui/Globals/: Configs.qml  Proxies.qml  Refs.qml  Vars.qml  qmldir
easyDiffractionApp/Gui/Sandbox/: HoverHandler.qml  ParamNames.qml  Parameter.qml  Recent.qml  Report.qml  Scrolling.qml  StatusBar.qml  TableView.qml  TextView.qml  VariableMenu.qml
easyDiffractionApp/Gui/Tests/: NoProjectCreated.qml  qmldir
easyDiffractionApp/Logic/: Analysis.py  Calculators.py  Connections.py  Data.py  Experiment.py  Fittables.py  Fitting.py  Fitting2.py  Helpers.py  Model.py  Plotting.py  Project.py  PyProxy.py  Status.py  Summary.py  Tables.py  __init__.py
snap/: snapcraft.yaml
tests/gui/: test__FitTwoPhasesTutorial.py  test__TutorialFitTwoPhases.py
tools/Scripts/: CheckAppExists.py  Config.py  FreezeApp.py  Functions.py  InstallApp.py  MakeInstaller.py  RelinkCrysfml.py  RenameTestVideos.py  RunApp.py  SignAppInstaller.py  SilentInstall.js  TranslateApp.py  UnzipAppInstaller.py  UploadToFtp.py  VoiceApp.py  ZipAppInstaller.py
(+187 files in other folders)
